...
    })

  useEffect(handlePageChange, [page])
  useEffect(handleScreenClose, [navigation, query.queryKey, queryClient])

  return (
    <Layout testID="review.screen">
      {pages[0] !== null ? (
        <PagerView
          initialPage={initialPage}
          ref={pagerViewRef}
          scrollEnabled={false}
          style={{ flex: 1 }}
...
